# SetlisteR

./: .env.template  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.md  feature_request.yml
.github/scripts/: create_issues.sh  create_labels.sh
.github/workflows/: ci.yml
src/: main.rs
src/api/: mod.rs  models.rs  setlist_fm.rs
src/data/: mod.rs  models.rs  setlist_data_processor.rs  setlist_data_reducer.rs
src/data/models/: args.rs  meta_data.rs  mod.rs  playlist_data.rs  song_stats.rs
src/data/tests/: mod.rs  setlist_data_processor.rs  setlist_data_reducer.rs  setlist_data_reducer_mother.rs  setlist_mother.rs
src/models/: mod.rs
src/secrets_manager/: mod.rs  secrets_manager.rs
src/secrets_manager/tests/: mod.rs  secrets_manager.rs
src/validator/: arg_validator.rs  artist_validator.rs  mod.rs  playlist_name_validator.rs
src/validator/tests/: args_mother.rs  artists_validator.rs  mod.rs  playlist_name_validator.rs
