[package]
name = "SetlisteR"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.42"
rayon = "1"
keyring = { version = "3", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native-sync-persistent", "crypto-rust"] }

[dev-dependencies]
serial_test = "3"

