[package]
name = "SetlisteR"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.3", features = ["json"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.42"
rayon = "1.12.0"
keyring-core = "1.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = "1.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }

[dev-dependencies]
serial_test = "3"

